# studioOpsAi

./: .coverage  .env.development  .env.example  .env.production  .env.template  .gitignore  AGENTS.md  CONFIGURATION.md  Claude.md  GEMINI.md  GEMINI_PLAN.md  INTEGRATION_FIX_PLAN.md  INTEGRATION_SUCCESS_SUMMARY.md  LANGFUSE_API_MIGRATION.md  Makefile  NEWPLAN.md  NEXT_STEPS_DETAILED_PLAN.md  OBSERVABILITY.md  OPERATIONAL_RUNBOOKS.md  PRD v2.txt  PRD v3.txt  RAG_FIXES_SUMMARY.md  README.md  SYSTEM_FIXES_DOCUMENTATION.md  TDD v2.txt  TROUBLESHOOTING.md  add_purchase_columns.py  add_vendor_price_created_at.py  apply_ingestion_migration.py  check_database_schema.py  check_documents_schema.py  check_documents_table.py  check_documents_table_structure.py  check_foreign_keys.py  check_plans_schema.py  complete_migration.py  comprehensive_integration_report_20250907_133002.json  comprehensive_integration_report_20250907_133142.json  comprehensive_integration_report_20250907_133711.json  comprehensive_integration_report_20250907_134430.json  (+105 more)
apps/api/: .coverage  .env.example  .env.test  context_mcp.py  database.py  llm_service.py  main.py  mcp_server.py  minimal_api.py  models.py  playwright_mcp.py  pyproject.toml  pytest.ini  rag_service.py  requirements.txt  run_tests.py  simple_api.py  simple_main.py  test_deletion_service.py  test_estimation.py  test_estimation_direct.py  test_estimation_simple.py  test_ingestion.py  test_main.py  test_mcp.py  test_mcp_client.py  test_minimal_api.py  test_minio_service.py  test_observability.py  test_pdf_generation.py  test_server.py  test_services.py
apps/api/middleware/: error_middleware.py  observability_middleware.py
apps/api/routers/: auth.py  chat.py  documents.py  estimation.py  health.py  ingest.py  instructor.py  materials.py  mem0.py  ocr.py  plans.py  projects.py  purchases.py  rate_cards.py  shipping_quotes.py  trello.py  unstructured.py  vendor_prices.py  vendors.py
apps/api/scripts/: health_diagnostics.py  init_auth.py  migration_manager.py
apps/api/services/: auth_service.py  config_validation_service.py  database_validation_service.py  document_upload_service.py  error_logging_service.py  estimation_service.py  health_monitoring_service.py  ingestion_service.py  instructor_service.py  minio_service.py  observability_service.py  ocr_service.py  pdf_service.py  pdf_service_stub.py  pricing_resolver.py  project_deletion_service.py  service_degradation_service.py  simple_pdf_service.py  startup_validation_service.py  trello_service.py  unstructured_service.py
apps/api/tests/: __init__.py  conftest.py  run_tests.py  setup_test_db.py  test_pdf_service.py  utils.py
apps/api/utils/: error_handling.py  error_recovery.py  (+1 more)
(+147 files in other folders)
